updated the colors and images for the UI

--- a/ui/src/app/entity/attribute/attribute-table.tpl.html
+++ b/ui/src/app/entity/attribute/attribute-table.tpl.html
@@ -93,7 +93,7 @@
                     <md-tooltip md-direction="top">
                         {{ 'attribute.show-on-widget' | translate }}
                     </md-tooltip>
-                    <md-icon>now_widgets</md-icon>
+                    <md-icon>now_widgets style="color:#000000;"</md-icon>
                     <span translate>attribute.show-on-widget</span>
                 </md-button>
             </div>
